improved-colombia-page

--- a/co.html
+++ b/co.html
@@ -8,8 +8,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/ml.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/bars.css">
   </head>
   <body>
     <header>
@@ -60,27 +60,171 @@
         </div>
     </div>
   </section>
-
-  <section class="about mt-2 p-4">
-    <h2 class="text-center mb-4">About Us</h2>
-    <div class="row align-items-center pt-0 pl-4 pr-4">
-      <div class="mb-4">
+      <section>
+      <div class="group_image" style="align-items: center">
+        <img src="image/Luker-group-picture.jpg" />
         <p>
-          As students on an international research trip to Colombia, our interdisciplinary fieldwork examines small-scale farming 
-          in the region, with a specific emphasis on Cacao cultivation. We will use Geographical Information Systems (GIS) to 
-          digitize and map data, creating visualizations of crop distribution and environmental patterns related to cocoa plants. By 
-          integrating field-collected data with GIS tools, our work provides valuable insights that serve as a foundational resource 
-          for decision-making. The collected data will be used by other teams working on this project to develop a deep-learning-based
-          disease detection model and conduct a thorough biological analysis offering clear insights into farmers' crops and 
-          showcasing ways to optimize their crop growth. This opportunity fosters collaboration with Colombian farmers, promoting 
-          cross-cultural exchange while advancing farming techniques, utilizing GIS, and promoting sustainability.  
+          Mariana Candamil, Kristine Morquecho, Juan Martín Betancur Uribe,
+          Rachael Gilmore, Viola Kuehl-jeberg, Denise Pacheco, Gloria Clemecia
+          Amaya, Mario Giraldo, Jhon Fredy Betancur Perez, Alex Modarresi, and
+          Yash Pansheriya
         </p>
       </div>
-    </div>
-  </section>
-    <footer class="footer2" style="color: white; text-align: center;">
+    </section>
+    <section class="about mt-2 p-4">
+      <h2 class="text-center mb-4">About Us</h2>
+      <div class="row align-items-center pt-0 pl-4 pr-4">
+        <div class="mb-4">
+          <p>
+            As students on an international research trip to Colombia, our
+            interdisciplinary fieldwork examines small-scale farming in the
+            region, with a specific emphasis on Cacao cultivation. Our work
+            includes engaging with local communities, visiting towns, and
+            conducting in-depth discussions with residents to better understand
+            their needs and aspirations. We will use Geographical Information
+            Systems (GIS) to digitize and map data, creating visualizations of
+            crop distribution and environmental patterns related to cocoa
+            plants. By integrating field-collected data with GIS tools, our work
+            provides valuable insights that serve as a foundational resource for
+            decision-making. The collected data will be used by other teams
+            working on this project to develop a deep-learning-based disease
+            detection model and conduct a thorough biological analysis offering
+            clear insights into farmers' crops and showcasing ways to optimize
+            their crop growth. This opportunity fosters collaboration with
+            Colombian farmers, promoting cross-cultural exchange while advancing
+            farming techniques, utilizing GIS, and promoting sustainability.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="Luker_section">
+        <h2 class="text-center mb-5">Granja Luker</h2>
+        <div class="row">
+            <div class="col-md-4">            
+                <div class="luker-column position-relative">
+                <img id="lukerImage1" src="image/Luker.jpg" alt="About Luker" />
+                <h3>About Luker</h3>
+                <p>
+                    Granja Luker is a leading research center focused on enhancing 
+                    cocoa productivity, minimizing crop losses, and developing 
+                    innovative agricultural practices to support cocoa farmers. 
+                    For over 60 years, it has utilized specialized resources—nurseries, 
+                    laboratories, experimental fields, and fermentation facilities—to 
+                    improve cultivation techniques and address emerging challenges in 
+                    cocoa production.
+                </p>
+              </div>
+
+            </div>
+            <div class="col-md-4">
+                <div class="luker-column position-relative">
+                    <img id="lukerImage2" src="image/Pod.JPG" alt="Luker's Challenges" />
+                    <h3>Luker's Challenges</h3>
+                    <p>
+                            Frosty Pod Rot is a fungal disease that can devastate cocoa 
+                        production, causing 50–90% crop loss across Central America, South America, 
+                        and West Africa. It spreads easily through water, wind, and 
+                        pod movement, making containment difficult. The best 
+                        prevention is early removal of infected pods, though detection 
+                        at early stages remains a challenge.
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="luker-column position-relative">
+                  <img id="lukerImage3" src="image/Nursery2.JPG" alt="How We Can Help" />
+                  <h3>Sustainability Efforts</h3>
+                    <p>
+                        Luker Farm is enhancing cocoa yields through its nursery program while testing biocontrol solutions for frosty pod disease. Researchers are evaluating 
+                        Trichoderma (already in use) and Daldinia, which is undergoing safety testing to prevent unintended contamination. Integrating these efforts with 
+                        advanced technology will improve crop resilience and sustainability.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="farming-community">
+      <h2>Small Farmers</h2>
+
+      <div class="about-the-farmer">
+        <img id="farmImage1" src="image/Fields.JPG" alt="Local Cocoa Farms" />
+        <div class="farm-text">
+          <h3>Local Cocoa Farms</h3>
+          <p>
+            During our trip, we visited a local farm in Belalcázar, where
+            farmers are part of a cocoa farming community with over 120 members.
+            They collaborate to develop new techniques and adopt innovative
+            technologies to enhance harvest yields.
+          </p>
+        </div>
+      </div>
+
+      <div class="about-the-farmer">
+        <div class="farm-text">
+          <h3>Regulating Productivity</h3>
+          <p>
+            Farmers use a university-provided weather station to monitor
+            environmental factors affecting cocoa pods. They also operate
+            fermentation facilities and processing machines for efficient cocoa
+            handling.
+          </p>
+        </div>
+        <img
+          id="farmImage2"
+          src="image/sensor.jpg"
+          alt="Monitoring Productivity"
+        />
+      </div>
+      
+    </section>
+
+    <footer class="footer2" style="color: white; text-align: center">
       <p>&copy; 2024 ColCo. All Rights Reserved.</p>
     </footer>
+    <script>
+      // Image Swap Function
+      function autoSwapImages(imageId, imagesArray, intervalTime) {
+        let index = 0; // Start index
+        setInterval(() => {
+          index = (index + 1) % imagesArray.length; // Loop through images
+          document.getElementById(imageId).src = imagesArray[index]; // Change image
+        }, intervalTime);
+      }
+
+      // Luker Section Images
+      autoSwapImages(
+        "lukerImage1",
+        ["image/Luker.jpg", "image/Cocoa_farm.jpg"],
+        4000
+      );
+      autoSwapImages(
+        "lukerImage2",
+        ["image/Pod.jpg", "image/Open_pod.jpg"],
+        4000
+      );
+      autoSwapImages(
+        "lukerImage3",
+        ["image/Nursery2.jpg", "image/trichoderma.png"],
+        4000
+      );
+
+      // Farming Community Images
+      autoSwapImages(
+        "farmImage1",
+        ["image/Fields.JPG", "image/pond.JPG"],
+        4000
+      );
+      autoSwapImages(
+        "farmImage2",
+        ["image/sensor.jpg", "image/processing_cocoa.jpg"],
+        4000
+      );
+    </script>
+  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
